<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Faridatul Jannah Quiz 1"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="20dp"
        android:padding="16dp"
        android:background="#CBD374"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nama"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/isinama"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_person_24"
            android:hint="@string/nama" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kode"
        app:layout_constraintTop_toBottomOf="@+id/nama"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/isikode"
            android:hint="@string/masukkan_kode"
            android:drawableStart="@drawable/baseline_add_shopping_cart_24"
            android:layout_width="380dp"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/jumlah"
        app:layout_constraintTop_toBottomOf="@+id/kode"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/jumlahbeli"
            android:hint="@string/jumlah_barang"
            android:drawableStart="@drawable/baseline_add_shopping_cart_24"
            android:layout_width="380dp"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/jumlah">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/gold" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/silver" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/biasa" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvDiskon"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/pembelian_di_atas_10_juta_diskon_sebesar_100_000"
        android:textSize="16dp"
        android:textStyle="bold"
        android:padding="10dp"
        android:textColor="#F41E1E"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btnPesan"
        app:layout_constraintTop_toBottomOf="@+id/tvDiskon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:hint="@string/pesan"
        android:textSize="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>